--- a/TestTODO/.env
+++ b/TestTODO/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/modern-todo
+MONGO_URI=mongodb+srv://sakalakasmith_db_user:ZpXmBggqqONdMK5R@focustodo.mff3cyi.mongodb.net/?appName=FocusTodo
 JWT_SECRET=supersecretkey_change_this_later
 EMAIL_USER=mailgate.send@gmail.com
 EMAIL_PASS=yzhe qftg vmtr xoww
