Fix API baseURL for production

--- a/TestTODO/server/.env
+++ b/TestTODO/server/.env
@@ -3,4 +3,4 @@ MONGO_URI=mongodb+srv://sakalakasmith_db_user:ZpXmBggqqONdMK5R@focustodo.mff3cyi
 JWT_SECRET=supersecretkey_change_this_later
 EMAIL_USER=mailgate.send@gmail.com
 EMAIL_PASS=yzhe qftg vmtr xoww
-Client_URL=http://localhost:5173
+Client_URL=https://focustodo1.onrender.com
